--- a/src/index.html
+++ b/src/index.html
@@ -28,22 +28,23 @@
   </div>
 
   <div class="workoutDisplay">
-    <h3>15 pushups</h3>
+    <div class="card-container">
+    </div>
   </div>
 </div>
 
   <div class="footer">
-
     <h3>This code was created by Rashidi Alleyne</h3>
   </div>
 
+<script src="js/index.js"></script>
 
 </body>
 </html>
 
-<!-- <script>
-  function displayLetters(e){
-    const readText = e.getElementById("searchForm")
-    readText.on
+<script>
+  const element = document.getElementById("a");
+  if(element){
+    element.parentElement.style.backgroundColor = 'blue';
   }
-</script> -->
+</script>
