Changelog 12.14 - Inside index.html script tags, I implemented an event listener to display cards based on keyup value which changes .card class in style.css. This works but only in the case of one letter at a time (enter a letter, backspace, enter a new letter). Cards only display in alphabetical order at this time also. Lastly, I changed the submit button to a clear button to set the display back to 'none' for all cards

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <form action="" id="searchForm">
       <label for="name"></label>
       <input type="text" id="name" placeholder="Enter Your Name">
-      <input type="submit" placeholder="Submit" id="submit">
+      <input type="submit" value="Clear" id="submit">
     </form>
   </div>
 
@@ -43,8 +43,19 @@
 </html>
 
 <script>
+  const bodyDiv = document.querySelector(".workoutDisplay")
   const element = document.getElementById("a");
   if(element){
     element.parentElement.style.backgroundColor = 'blue';
+    //element.parentElement.style.display = 'revert';
   }
+
+  document.getElementById("name").addEventListener('keyup',()=>{
+    const inputText = document.getElementById("name").value;
+    document.getElementById(inputText).parentElement.style.display = 'revert';
+  });
+
+  document.getElementById('submit').addEventListener('click',()=>{
+    document.getElementsByClassName('card').style.display = 'none';
+  })
 </script>
