Changelog 12.18 - Revamped CSS, finally fit the main div to the whole screen and the footer sticks at the bottom! Going live soon!

--- a/src/index.html
+++ b/src/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>NameWorkout.io</title>
     <link href="css/style.css" rel="stylesheet">
-</head>
-<body>
-  <div class="header">
-    <div id="headerName">
-      <h1 id="nameWorkout">
-        NameWorkout
-      </h1>
-      <h1 id="io">.io</h1>
+    <script src="https://kit.fontawesome.com/52425383c8.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="header">
+      <div id="headerName">
+        <h1 id="nameWorkout">
+          NameWorkout
+        </h1>
+        <h1 id="io">.io</h1>
+      </div>
+      <div class="banner">
+        <h2>Personalized Fitness, Powered by Your Name!</h2>
+      </div>
     </div>
-    <div class="banner">
-      <h2>Personalized Fitness, Powered by Your Name!</h2>
+
+    <div class="main">
+    <div class="searchBar">
+      <form action="" id="searchForm">
+        <label for="name"></label>
+        <input type="text" id="name" placeholder="Enter Your Name">
+        <input type="submit" value="Clear" id="submit">
+      </form>
+    </div>
+
+    <div class="workoutDisplay">
+      <div class="card-container">
+      </div>
     </div>
   </div>
 
-<div class="main">
-  <div class="searchBar">
-    <form action="" id="searchForm">
-      <label for="name"></label>
-      <input type="text" id="name" placeholder="Enter Your Name">
-      <input type="submit" value="Clear" id="submit">
-    </form>
-  </div>
+    <div class="footer">
 
-  <div class="workoutDisplay">
-    <div class="card-container">
+      <h3>Code by: Rashidi Alleyne</h3>
+      <div class="image-container">
+        <a href="https://www.linkedin.com/in/rashidi-alleyne-11242b222/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/ralleyne531"><i class="fa-brands fa-github"></i></a>
+        <a href="mailto:ralleyne531@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+      </div>
     </div>
-  </div>
-</div>
 
-  <div class="footer">
-    <h3>This code was created by Rashidi Alleyne</h3>
-  </div>
+    <script src="js/index.js"></script>
 
-<script src="js/index.js"></script>
-
-</body>
+  </body>
 </html>
-
-<script>
-  const bodyDiv = document.querySelector(".workoutDisplay")
-
-
-
-
-</script>
