--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
 
     <div class="footer">
 
-      <h3>Code by: Rashidi Alleyne</h3>
+      <h3>code by: Rashidi Alleyne</h3>
+      <h4>&copy2023</h4>
+      <h4>Protected Under MIT License</h4>
       <div class="image-container">
         <a href="https://www.linkedin.com/in/rashidi-alleyne-11242b222/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/ralleyne531"><i class="fa-brands fa-github"></i></a>
