Changelog 12.18 - Still trying to avoid placing the entire alphabet array in the index.js file. Working on the maintenance for the random rep generation next.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>NameWorkout.io</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/52425383c8.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <script src="js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
 
   </body>
 </html>
