Changelog 12.23* - Still trying to avoid placing the entire alphabet array in the index.js file. Working on the maintenance for the random rep generation next.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="searchBar">
       <form action="" id="searchForm">
         <label for="name"></label>
-        <input type="text" id="name" placeholder="Enter Your Name">
+        <input type="text" id="name" placeholder="Enter Your Name!">
         <input type="submit" value="Clear" id="submit">
       </form>
     </div>
