--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div class="header">
+      <div>
+          <input type="checkbox" id="darkMode">
+          <label for="darkMode" id="darkMode-label"></label>
+      </div>
       <div id="headerName">
         <h1 id="nameWorkout">
           NameWorkout
@@ -23,7 +27,7 @@
     <div class="searchBar">
       <form action="" id="searchForm">
         <label for="name"></label>
-        <input type="text" id="name" placeholder="Enter Your Name!">
+        <input type="text" id="name" placeholder="Enter your name to get started!">
         <input type="submit" value="Clear" id="submit">
       </form>
     </div>
