--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./img/favicon.ico">
+    <link rel="apple-touch-icon" href="./img/apple-touch-icon.png" />
     <title>NameWorkout.io</title>
     <link href="./css/style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/52425383c8.js" crossorigin="anonymous"></script>
